Thu Jul 26 12:43:38 PDT 2007 William Brack <wbrack@mmm.com.hk>

	* libxslt/xslt.c: Removed the exclude-result-prefix change of
	  31 May 2007.  Fixes bug #459713.

Sat Jun 16 07:42:18 PDT 2007 William Brack <wbrack@mmm.com.hk>

	* libxslt/transform.c: Fixed problem with RVT cleanup related
	  to some exslt functions (reported on the list by Marc Adkins).

Wed Jun 13 13:27:48 PDT 2007 William Brack <wbrack@mmm.com.hk>

	* tests/exslt/common/node-set.9.[xml,xsl,out],
	  tests/exslt/common/Makefile.am: added test case for bug #413451

Tue Jun 12 18:43:05 CEST 2007 Daniel Veillard <daniel@veillard.com>

	* NEWS configure.in doc/*: preparing release of 1.1.21

Thu May 31 12:38:08 PDT 2007 William Brack <wbrack@mmm.com.hk>

	* libxslt/xslt.c: fixed obscure namespace problem related to
	  exclude-result-prefix

Mon May  7 00:14:28 HKT 2007 William Brack <wbrack@mmm.com.hk>

	* libxslt/transform.c: fixed minor compilation warning; no change
	  to logic.

Sun May  6 23:42:38 HKT 2007 William Brack <wbrack@mmm.com.hk>

	* libexslt/math.c: fixed two memory leaks, one in exsltMathConstant
	  and one in exsltMathConstantFunction (bug #436324)

Fri May  4 15:51:58 HKT 2007 William Brack <wbrack@mmm.com.hk>

	* libxslt/transform.c: fixed xpath context housekeeping problem
	  on processing "choose" (bug 435479).

Thu Apr 26 11:10:18 HKT 2007 William Brack <wbrack@mmm.com.hk>

	* libxslt/transform.c: fixed (another) problem with cached
	  RVT's (from re-opened #378766).

Tue Mar 27 16:50:52 CEST 2007 Daniel Veillard <daniel@veillard.com>

	* libxslt/xsltutils.c: apply patch fron Shaun McCance to hook
	  xsl:message construct to the new per-xsltTransformCtxt error
	  callback if set up.
	* Makefile.am: do not package svn files in releases

Fri Mar  2 18:45:48 HKT 2007 William Brack <wbrack@mmm.com.hk>

	* libxslt/xsltconfig.h.in: added setting of TRIO_REPLACE_STDIO
	  when TRIO routines are required.
	* libxslt/namespaces.c, libxslt/xsltutils.c: enhanced handling